<resources>
    <string name="app_name">Agend-In</string>
    <string name="action_calendar">Calendario</string>
    <string name="action_add_task">Agregar tarea</string>
    <string name="action_settings">Configuraciones</string>
    <string name="agregar_actividad">Agregar Actividad</string>
    <string name="editar_actividad">Editar Actividad</string>
    <string name="nombre_actividad">Nombre de la actividad</string>
    <string name="fecha_actividad">Fecha de la actividad</string>
    <string name="hora_actividad">Hora de la actividad</string>
    <string name="descripcion">Descripcion</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar">Agregar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_calendario">Calendario 📅</string>
    <string name="configuracion">Configuración ⚙</string>
    <string name="manual_modo">Preferencuas en modo Oscuro/Claro manual</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="sensor_automatico">Preferencias en modo Oscuro/Claro Automatico</string>
    <string name="detalles_actividad">Detalles de la actividad</string>
    <string name="importancia">Importancia</string>
    <string name="editar">Editar</string>
    <string name="eliminar_act">Eliminar</string>
    <string name="actividades">Actividades 📒</string>
    <string name="calendario">Calendario 📅</string>
    <string name="fecha">Fecha</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="hora">Hora</string>
    <string name="hh_mm">HH:MM</string>
    <string name="eliminar">Eliminar</string>
    <string name="detalles">Detalles</string>
    <string name="titulo_tasklist">Actividades 📒</string>
    <string name="actividad">Actividad</string>
    <string name="hora_calendar">Hora</string>
    <string name="dia_calendar">Dia</string>
    <string name="nombre_de_actividad">Nombre de actividad</string>
    <string name="modo_claro">Modo Claro</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="add_image">Add Image</string>
    <string name="add_audio">Add Audio</string>
    <string name="añadir_imagen">Añadir Imagen</string>
    <string name="añadir_audio">Añadir Audio</string>
    <string name="imagen_guardada">Imagen guardada</string>
    <string name="play_button">Boton play</string>
    <string name="compartir">Compartir</string>
    <string name="guardar">Guardar</string>
    <string name="cambiar_imagen">Cambiar Imagen</string>
    <string name="cambiar_audio">Cambiar Audio</string>
    <string-array name="priority_levels">
        <item>Alta</item>
        <item>Media</item>
        <item>Baja</item>
    </string-array>
</resources>
