<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="361dp"
        android:layout_height="641dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@color/azul_marino"
            android:gravity="center"
            android:text="@string/detalles_actividad"
            android:textColor="@color/gris_suave"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/taskDetailName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/nombre_actividad"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/taskDetailDate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/fecha_actividad"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/taskDetailTime"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/hora_actividad"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/taskDetailPriority"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/importancia"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/taskDetailDescription"
            android:layout_width="match_parent"
            android:layout_height="343dp"
            android:text="@string/descripcion"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/editar" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eliminar_act" />

            <Button
                android:id="@+id/buttonShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Compartir" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
