<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="120dp"
        android:layout_marginBottom="611dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">


            <TextView
                android:id="@+id/ActivityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/nombre_actividad"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="85dp"
                android:layout_height="49dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="3dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/fecha"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Date"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/yyyy_mm_dd"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="49dp"
                android:layout_marginEnd="3dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/hora"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Hour"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/hh_mm"
                    android:textSize="11sp" />

            </LinearLayout>

            <ImageButton
                android:layout_width="69dp"
                android:layout_height="50dp"
                android:contentDescription="@string/eliminar"
                android:scaleType="centerInside"
                android:src="@drawable/ic_eliminar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/botonEditTask"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:text="@string/editar" />

            <Button
                android:id="@+id/botonViewDetails"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:text="@string/detalles" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>