<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/azul_marino"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="98dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="98dp"
            android:text="@string/configuracion"
            android:textColor="@color/gris_suave"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchAutoMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_automatico" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchManualMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_modo"/>

        <RadioGroup
            android:id="@+id/radioGroupTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/radioLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modo_claro" />

            <RadioButton
                android:id="@+id/radioDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modo_oscuro"
                android:layout_marginStart="16dp"/>
        </RadioGroup>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notificaciones" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
