<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:background="@drawable/item_background"
    android:elevation="4dp">

    <TextView
        android:id="@+id/taskNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gris_suave"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/nombre_de_actividad" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/taskDayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gris_suave"
            android:textSize="14sp"
            android:text="@string/dia_calendar" />

        <TextView
            android:id="@+id/taskHourTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/gris_suave"
            android:textSize="14sp"
            android:text="@string/hora_calendar" />
    </LinearLayout>

</LinearLayout>